--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 /*Common css rules that will be used across all pages */
+
 :root {
   /** Dark theme primary colors */
   --color-primary-a0: #c8ad54;
@@ -40,8 +41,8 @@ body {
   min-height: 100dvh;
   display: flex;
   flex-direction: column;
-  color: var(--color-tertiary-dark);
-  background-color: var(--color-primary-lightest);
+  color: var(--color-primary-text);
+  background-color: var(--color-surface-a0);
 }
 
 h1,
@@ -78,4 +79,36 @@ input {
   outline: 0;
   border-radius: 8px;
   transition: all 0.3s ease-in-out;
+}
+
+/*Error container*/
+
+.errorContainer {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  color: var(--color-error);
+
+  .errorHeader {
+    font-size: 2rem;
+  }
+
+  .errorBody {
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+
+  .gudieList {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+  }
+
+  .errorFooter {
+    font-size: 0.9rem;
+    margin-top: 25px;
+  }
 }
