--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,9 @@
-/*Index/Start page css rules*/
+/*Index/start page css rules*/
+
+.movieCardContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
