--- a/css/styles.css
+++ b/css/styles.css
@@ -112,3 +112,13 @@ input {
     margin-top: 25px;
   }
 }
+
+/*Movie card*/
+
+.moiveCard {
+  width: 300px;
+  height: 400px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
