--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,11 @@
 /*Index/start page css rules*/
 
 .movieCardContainer {
+  max-height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 10px;
+  overflow-y: auto;
 }
