--- a/css/styles.css
+++ b/css/styles.css
@@ -113,14 +113,54 @@ input {
   }
 }
 
+/*Icon container*/
+
+.iconContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+
+  img {
+    width: 30px;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+}
+
 /*Movie card*/
 
 .movieCard {
   width: min(100%, 400px);
   height: 540px;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.04);
+  }
 
   .poster {
     width: 100%;
     height: 100%;
+  }
+
+  .iconContainer {
+    padding: 10px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    background-color: var(--color-surface-a0);
+
+    img {
+      width: 40px;
+    }
+
+    p {
+      font-size: 2rem;
+    }
   }
 }
