--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,50 @@
   box-sizing: border-box;
 }
 
+header {
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: var(--color-surface-a10);
+
+  .logo {
+    width: 140px;
+  }
+
+  nav {
+    ul {
+      display: flex;
+      gap: 30px;
+
+      li {
+        a {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          p {
+            color: var(--color-surface-a50);
+          }
+        }
+      }
+    }
+  }
+}
+
 body {
   min-height: 100dvh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 50px;
   color: var(--color-primary-text);
   background-color: var(--color-surface-a0);
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 h1,
@@ -127,6 +165,19 @@ input {
 
   p {
     font-size: 1rem;
+  }
+}
+
+/*Icon*/
+
+.icon {
+  width: 30px;
+  transition: 0.3s all ease-in-out;
+}
+
+.icon-scale {
+  &:hover {
+    transform: scale(1.07);
   }
 }
 
