--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,19 @@ header {
 
   nav {
     ul {
-      display: flex;
+      width: min(140px, 100%);
+      min-height: 100dvh;
+      padding: 90px 0 20px 0;
+      display: none;
+      align-items: center;
+      flex-direction: column;
       gap: 30px;
+      list-style: none;
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 1;
+      background-color: var(--color-surface-a10);
 
       li {
         a {
@@ -68,6 +79,63 @@ header {
         }
       }
     }
+
+    .show-ul {
+      display: flex;
+    }
+  }
+
+  /* nav img {
+      width: 40px;
+      height: 40px;
+    } */
+
+  .nav-icon {
+    width: 35px;
+    height: 30px;
+    margin: 10px 10px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 2;
+    cursor: pointer;
+    display: inline-block;
+
+    span {
+      background-color: var(--color-primary-a0);
+      position: absolute;
+      border-radius: 2px;
+      transition: 0.3s cubic-bezier(0.8, 0.5, 0.2, 1.4);
+      width: 100%;
+      height: 4px;
+      transition-duration: 500ms;
+
+      &:nth-child(1) {
+        top: 0px;
+        left: 0px;
+      }
+      &:nth-child(2) {
+        top: 13px;
+        left: 0px;
+        opacity: 1;
+      }
+      &:nth-child(3) {
+        bottom: 0px;
+        left: 0px;
+      }
+    }
+  }
+
+  .open span:nth-child(1) {
+    transform: rotate(45deg);
+    top: 13px;
+  }
+  .open span:nth-child(2) {
+    opacity: 0;
+  }
+  .open span:nth-child(3) {
+    transform: rotate(-45deg);
+    top: 13px;
   }
 }
 
@@ -213,5 +281,20 @@ input {
     p {
       font-size: 2rem;
     }
+  }
+}
+
+@media (min-width: 768px) {
+  .nav-icon {
+    display: none !important;
+  }
+
+  .navUl {
+    position: static;
+    width: fit-content;
+    min-height: auto;
+    display: flex;
+    flex-direction: row;
+    padding: 0;
   }
 }
