--- a/css/styles.css
+++ b/css/styles.css
@@ -143,11 +143,33 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 50px;
   color: var(--color-primary-text);
   background-color: var(--color-surface-a0);
   overflow-x: hidden;
   overflow-y: auto;
+
+  main {
+    .heroContainer {
+      height: 100dvh;
+      width: 100%;
+      margin-bottom: 200px;
+      position: relative;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      h1 {
+        font-size: clamp(3rem, 5vw, 6rem);
+        text-align: left;
+        position: absolute;
+        left: 2%;
+        bottom: 2%;
+      }
+    }
+  }
 }
 
 h1,
