--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
     justify-content: space-between;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 100;
     background-color: var(--color-surface-a10);
 
     .logo {
@@ -291,6 +291,18 @@ input {
     transform: scale(1.01);
   }
 
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 5rem;
+    z-index: 1;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 0) 100%);
+  }
+
   .poster {
     width: 100%;
     height: 100%;
@@ -301,7 +313,9 @@ input {
     position: absolute;
     top: 0px;
     right: 0px;
-    background-color: var(--color-surface-a0);
+    z-index: 2;
+    /* background-color: rgba(0, 0, 0, 0.4); */
+    /* background-color: var(--color-surface-a0); */
 
     img {
       width: 40px;
