--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,39 @@
 /*Index/start page css rules*/
 
+.heroContainer {
+  height: 100dvh;
+  width: 100%;
+  margin-bottom: 200px;
+  position: relative;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  h1 {
+    font-size: clamp(3rem, 5vw, 6rem);
+    text-align: left;
+    position: absolute;
+    left: 2%;
+    bottom: 2%;
+  }
+}
+
+.filterContainer {
+  padding: 10px;
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
+  .categoriesBtn {
+    cursor: pointer;
+  }
+}
+
 .movieCardContainer {
   max-height: 100vh;
   width: 100%;
