--- a/css/styles.css
+++ b/css/styles.css
@@ -157,26 +157,9 @@ body {
   }
 
   main {
-    .heroContainer {
-      height: 100dvh;
-      width: 100%;
-      margin-bottom: 200px;
-      position: relative;
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-
-      h1 {
-        font-size: clamp(3rem, 5vw, 6rem);
-        text-align: left;
-        position: absolute;
-        left: 2%;
-        bottom: 2%;
-      }
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
