--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,121 @@
     width: 50px;
     cursor: pointer;
   }
+
+  .searchBox {
+    position: relative;
+
+    &:hover .searchInput {
+      width: 350px;
+      background: var(--color-surface-a20);
+    }
+
+    &:hover i {
+      left: auto;
+      right: 10px;
+      transform: translate(0, -50%);
+      opacity: 0;
+    }
+
+    .searchInput {
+      padding: 12px;
+      width: 60px;
+      border-radius: 50px;
+      outline: none;
+      transition: 0.5s;
+      color: var(--color-primary-a50);
+      border: 3px solid var(--color-primary-a50);
+      background: none;
+
+      &::placeholder {
+        opacity: 0;
+      }
+    }
+
+    i {
+      font-size: 1.4rem;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: var(--color-primary-a50);
+      transition: 0.7s;
+    }
+  }
+
+  .sortBox {
+    padding: 12px;
+    width: 60px;
+    min-height: 50px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: var(--color-primary-a50);
+    border: 3px solid var(--color-primary-a50);
+    background: none;
+    position: relative;
+
+    &:hover {
+      width: 350px;
+      /* border-radius: 0; */
+      border: 3px solid transparent;
+      background: var(--color-surface-a20);
+    }
+
+    &:hover .sortDropdown {
+      display: block;
+      opacity: 1;
+    }
+
+    &:hover .sortIcon {
+      left: auto;
+      right: 10px;
+      transform: translate(0, -50%);
+      opacity: 0;
+    }
+
+    .sortIcon {
+      width: 24px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: 0.7s;
+    }
+
+    .sortDropdown {
+      width: 105%;
+      padding: 12px;
+      display: none;
+      opacity: 0;
+      position: absolute;
+      top: -5px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 99;
+      border-radius: 20px;
+      border: 3px solid var(--color-primary-a50);
+      background: var(--color-surface-a20);
+      transition: all 0.7s ease-out;
+
+      .sortOptions {
+        width: fit-content;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+
+        .sortOption {
+          opacity: 0;
+          cursor: pointer;
+          animation-name: fadeIn;
+          animation-duration: 0.3s;
+          animation-timing-function: ease-out;
+          animation-fill-mode: forwards;
+        }
+      }
+    }
+  }
 }
 
 .movieCardContainer {
@@ -45,43 +160,11 @@
   overflow-y: auto;
 }
 
-.searchBox {
-  position: relative;
-
-  &:hover .searchInput {
-    width: 350px;
-    background: var(--color-surface-a20);
-  }
-
-  &:hover i {
-    left: auto;
-    right: 10px;
-    transform: translate(0, -50%);
+@keyframes fadeIn {
+  from {
     opacity: 0;
   }
-
-  .searchInput {
-    padding: 12px;
-    width: 60px;
-    border-radius: 50px;
-    outline: none;
-    transition: 0.5s;
-    color: var(--color-primary-a50);
-    border: 3px solid var(--color-primary-a50);
-    background: none;
-
-    &::placeholder {
-      opacity: 0;
-    }
-  }
-
-  i {
-    font-size: 1.4rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--color-primary-a50);
-    transition: 0.7s;
+  to {
+    opacity: 1;
   }
 }
