--- a/css/index.css
+++ b/css/index.css
@@ -21,21 +21,42 @@
   }
 }
 
+.filterMessage {
+  font-size: clamp(1.7rem, 2vw, 2.5rem);
+  margin-bottom: 40px;
+}
+
 .filterContainer {
-  padding: 10px;
+  width: min(100%, 900px);
+  padding: 40px;
   margin-bottom: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
+  position: relative;
+  z-index: 99;
+  border-radius: 50px;
+  box-shadow: inset 0 0 10px var(--color-surface-a20);
 
   .categoriesBtn {
-    width: 50px;
+    width: 42px;
     cursor: pointer;
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+
+    &:hover {
+      transform: translateY(-50%) scale(1.07);
+    }
   }
 
   .searchBox {
-    position: relative;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    &:hover {
+      z-index: 101;
+    }
 
     &:hover .searchInput {
       width: 350px;
@@ -55,9 +76,13 @@
       border-radius: 50px;
       outline: none;
       transition: 0.5s;
-      color: var(--color-primary-a50);
+      color: rgba(233, 218, 178, 0);
       border: 3px solid var(--color-primary-a50);
       background: none;
+
+      &:hover {
+        color: rgba(233, 218, 178, 1);
+      }
 
       &::placeholder {
         opacity: 0;
@@ -79,16 +104,18 @@
     padding: 12px;
     width: 60px;
     min-height: 50px;
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
     border-radius: 50px;
     transition: 0.5s;
     color: var(--color-primary-a50);
     border: 3px solid var(--color-primary-a50);
     background: none;
-    position: relative;
 
     &:hover {
       width: 350px;
-      /* border-radius: 0; */
       border: 3px solid transparent;
       background: var(--color-surface-a20);
     }
@@ -130,20 +157,38 @@
       transition: all 0.7s ease-out;
 
       .sortOptions {
-        width: fit-content;
-        margin: auto;
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 10px;
 
         .sortOption {
+          width: 100%;
+          padding: 4px;
           opacity: 0;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 10px;
           cursor: pointer;
           animation-name: fadeIn;
           animation-duration: 0.3s;
           animation-timing-function: ease-out;
           animation-fill-mode: forwards;
+          transition: all 0.3s ease-in-out;
+
+          p {
+            text-align: center;
+          }
+
+          &:hover {
+            background-color: var(--color-surface-a30);
+          }
+        }
+
+        .selected {
+          background-color: var(--color-surface-a30);
         }
       }
     }
@@ -166,5 +211,14 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+@media (max-width: 768px) {
+  .searchBox:hover .searchInput {
+    width: 140px !important;
+  }
+  .sortBox:hover {
+    width: 140px !important;
   }
 }
