--- a/css/styles.css
+++ b/css/styles.css
@@ -297,8 +297,6 @@ input {
     top: 0px;
     right: 0px;
     z-index: 2;
-    /* background-color: rgba(0, 0, 0, 0.4); */
-    /* background-color: var(--color-surface-a0); */
 
     img {
       width: 40px;
@@ -308,6 +306,10 @@ input {
       font-size: 2rem;
     }
   }
+}
+
+.hidden {
+  display: none;
 }
 
 @media (min-width: 768px) {
