--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@
     position: absolute;
     left: 2%;
     bottom: 2%;
+    user-select: none;
   }
 }
 
@@ -242,7 +243,7 @@
 }
 
 .movieCardContainer {
-  max-height: 100vh;
+  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
