--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,10 @@ input {
 
 .errorContainer {
   padding: 20px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
   align-items: center;
