--- a/css/movieDetails.css
+++ b/css/movieDetails.css
@@ -16,5 +16,21 @@ main {
       display: flex;
       justify-content: space-between;
     }
+
+    .yearDuration {
+      padding: 20px 30px;
+      width: fit-content;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 200px;
+      border-radius: 50px;
+      box-shadow: inset 0 0 10px var(--color-surface-a20);
+
+      .year,
+      .duration {
+        font-size: 1.4rem;
+      }
+    }
   }
 }
