--- a/css/movieDetails.css
+++ b/css/movieDetails.css
@@ -18,8 +18,8 @@ main {
     }
 
     .yearDuration {
-      padding: 20px 30px;
       width: fit-content;
+      padding: 20px 30px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -82,6 +82,30 @@ main {
       text-align: center;
       font-size: clamp(1.4rem, 2vw, 2rem);
     }
+
+    .languages {
+      width: fit-content;
+      margin: 40px;
+      padding: 40px 30px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      border-radius: 50px;
+      box-shadow: inset 0 0 10px var(--color-surface-a20);
+
+      .language {
+        font-size: clamp(0.9rem, 2vw, 1.4rem);
+      }
+    }
+  }
+}
+
+@media (min-width: 475px) {
+  .languages {
+    padding: 20px 30px !important;
+    flex-direction: row !important;
   }
 }
 
