--- a/css/movieDetails.css
+++ b/css/movieDetails.css
@@ -120,7 +120,10 @@ main {
         width: 100%;
         padding-bottom: 20px;
         display: flex;
+        flex-direction: column;
+        align-items: center;
         justify-content: space-evenly;
+        gap: 20px;
         border-bottom: 1px solid var(--color-surface-a20);
 
         .directors,
@@ -184,6 +187,25 @@ main {
             }
           }
         }
+      }
+    }
+
+    .financials {
+      width: fit-content;
+      margin: 40px;
+      padding: 40px 30px;
+      display: flex;
+      justify-content: center;
+      gap: 200px;
+      border-radius: 50px;
+      box-shadow: inset 0 0 10px var(--color-surface-a20);
+
+      .budget,
+      .revenue {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 7px;
       }
     }
   }
