--- a/css/movieDetails.css
+++ b/css/movieDetails.css
@@ -85,6 +85,7 @@ main {
 
     .desc {
       margin-top: 40px;
+      width: min(100%, 1400px);
       text-align: center;
       font-size: clamp(1.4rem, 2vw, 2rem);
     }
@@ -207,6 +208,13 @@ main {
         align-items: center;
         gap: 7px;
       }
+    }
+
+    .links {
+      margin-bottom: 30px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
     }
   }
 }
