--- a/css/watchlist.css
+++ b/css/watchlist.css
@@ -1,6 +1,29 @@
 /*Watchlist css rules*/
 
 main {
+  .pageMessage {
+    padding: 20px 30px 20px 40px;
+    margin-top: 40px;
+
+    border-radius: 20px;
+    border: 1px solid var(--color-primary-a50);
+  }
+
+  .numMovies {
+    position: relative;
+    &::after {
+      content: attr(data-movies);
+      position: absolute;
+      top: -10px;
+      left: -10px;
+      padding: 2px 8px 6px 8px;
+      font-size: 0.9rem;
+      border-radius: 50%;
+      border: 1px solid var(--color-primary-a50);
+      background-color: var(--color-surface-a0);
+    }
+  }
+
   .watchlist {
     width: 100%;
     margin-top: 60px;
