--- a/css/watchlist.css
+++ b/css/watchlist.css
@@ -2,9 +2,9 @@
 
 main {
   .pageMessage {
+    max-width: 90%;
     padding: 20px 30px 20px 40px;
     margin-top: 40px;
-
     border-radius: 20px;
     border: 1px solid var(--color-primary-a50);
   }
