--- a/css/index.css
+++ b/css/index.css
@@ -1,24 +1,28 @@
 /*Index/start page css rules*/
 
-.heroContainer {
-  height: 100dvh;
+main {
   width: 100%;
-  margin-bottom: 200px;
-  position: relative;
 
-  img {
+  .heroContainer {
+    height: 100dvh;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+    margin-bottom: 200px;
+    position: relative;
 
-  h1 {
-    font-size: clamp(3rem, 5vw, 6rem);
-    text-align: left;
-    position: absolute;
-    left: 2%;
-    bottom: 2%;
-    user-select: none;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    h1 {
+      font-size: clamp(3rem, 5vw, 6rem);
+      text-align: left;
+      position: absolute;
+      left: 2%;
+      bottom: 2%;
+      user-select: none;
+    }
   }
 }
 
