Created the buttons form customizing movies suggestions and alos implemented a basic post request to genereate 10 movies

--- a/css/moviequiz.css
+++ b/css/moviequiz.css
@@ -1,1 +1,17 @@
 /*Moviequiz css rules*/
+
+main {
+  .movieQuiz {
+    .genres {
+      .genreBtns {
+        .genreBtn {
+        }
+      }
+    }
+  }
+
+  .generateMovies {
+    margin-top: 100px;
+    filter: hue-rotate(180deg);
+  }
+}
