--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   color: var(--color-primary-text);
   background-color: var(--color-surface-a0);
   overflow-x: hidden;
@@ -226,7 +227,27 @@ input {
   border: 0;
   outline: 0;
   border-radius: 8px;
+  cursor: pointer;
+  border: 2px solid transparent;
   transition: all 0.3s ease-in-out;
+  background: linear-gradient(90deg, var(--color-primary-a0) 0%, var(--color-primary-a30) 100%);
+  color: var(--color-surface-a0);
+
+  &:hover {
+    background: linear-gradient(0deg, var(--color-primary-a0) 0%, var(--color-primary-a30) 100%);
+  }
+
+  &:active {
+    border: 2px solid var(--color-surface-a40);
+  }
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 /*Error container*/
