--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   color: var(--color-primary-text);
   background-color: var(--color-surface-a0);
   overflow-x: hidden;
@@ -158,6 +157,7 @@ body {
   }
 
   main {
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -248,6 +248,10 @@ input {
   align-items: center;
   flex-wrap: wrap;
   gap: 10px;
+}
+
+.selected-btn {
+  opacity: 0.2;
 }
 
 /*Error container*/
