--- a/css/spinner.css
+++ b/css/spinner.css
@@ -1,6 +1,9 @@
 .loader {
   width: 50px;
   height: 50px;
+  margin: auto;
+  grid-column: 1/5;
+  grid-row: 0;
   border-radius: 50%;
   background: radial-gradient(farthest-side, #e9dab2 94%, #0000) top/8px 8px no-repeat, conic-gradient(#0000 30%, #e9dab2);
   -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 6px), #000 0);
