--- a/css/styles.css
+++ b/css/styles.css
@@ -380,6 +380,10 @@ input {
   color: var(--color-success);
 }
 
+.relative {
+  position: relative !important;
+}
+
 @media (min-width: 768px) {
   .nav-icon {
     display: none !important;
