--- a/css/styles.css
+++ b/css/styles.css
@@ -323,6 +323,13 @@ input {
 
 /*Movie card*/
 
+.movieContainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  justify-items: center;
+}
+
 .movieCard {
   width: min(100%, 400px);
   height: 540px;
@@ -396,5 +403,30 @@ input {
     display: flex;
     flex-direction: row;
     padding: 0;
+  }
+
+  .movieContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    justify-items: center;
+  }
+}
+
+@media (min-width: 1024px) {
+  .movieContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    justify-items: center;
+  }
+}
+
+@media (min-width: 1440px) {
+  .movieContainer {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    justify-items: center;
   }
 }
