--- a/css/styles.css
+++ b/css/styles.css
@@ -266,6 +266,7 @@ input {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  text-align: center;
   color: var(--color-error);
 
   .errorHeader {
@@ -273,6 +274,7 @@ input {
   }
 
   .errorBody {
+    width: 100vw;
     font-size: 1.2rem;
     font-weight: 600;
   }
@@ -282,6 +284,10 @@ input {
     display: flex;
     flex-direction: column;
     gap: 4px;
+
+    .gudieItem {
+      display: none;
+    }
   }
 
   .errorFooter {
